# Lab4

./: CMakeLists.txt  main.c  otchet.docx  otchet_5.docx  otchet_6.docx  tests.c  tests.h  ~$chet_6.docx  ~WRL1689.tmp
Queue test/: main.cpp  matrix.test
graphs/: dfs.c  dfs.h  listsGraph.c  listsGraph.h  matrixgraph.c  matrixgraph.h
graphs/lists/: lists.c  lists.h
graphs/matrix/: matrix.c  matrix.h
graphs/operations/matrix/: remvrtx.c
modules/: bfs.c  bfs.h  coloring.c  coloring.h  dfs.c  dfs.h  lists.c  lists.h  listsGraph.c  listsGraph.h  matrix.c  matrix.h  matrixgraph.c  matrixgraph.h  tools.c  tools.h  vertex.h
